--- a/html/modalEditLocalita.html
+++ b/html/modalEditLocalita.html
@@ -56,6 +56,7 @@
 				  <option>bicycle</option>
 				  <option>motorcycle</option>
 				  <option>road</option>
+				  <option>video-camera</option>
 				</select>
 			</div>
 			<div class="col-lg-2">
