--- a/html/navbar.html
+++ b/html/navbar.html
@@ -27,8 +27,8 @@
 
         
 
-        <a ui-sref="app.login" class="btn btn-link pull-right" type="button"  >
-          <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+        <a ng-if="false"  ui-sref="app.login" class="btn btn-link pull-right" type="button"  >
+          <span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
         </a>
 
         </li>
