--- a/html/settings.html
+++ b/html/settings.html
@@ -51,12 +51,12 @@ height: 100%;
   <h1 class="text-center">To Do</h1>    
 
 <hr>
-cancella video
 <hr>
 
 <hr>
+capire dove aggiungere legenda per icone. e definire il testo.
 <hr>
-
+provare a sistemare legenda con la data precisa
 </div>
 
 
